--- a/elements/CrimsonSteveMutantMobsConfigs.mod.json
+++ b/elements/CrimsonSteveMutantMobsConfigs.mod.json
@@ -80,6 +80,45 @@
             "stringlist": []
           }
         ]
+      },
+      {
+        "category": "witheredHopkeleton",
+        "entries": [
+          {
+            "item": {
+              "value": ""
+            },
+            "silkTouchMode": 1,
+            "block": {
+              "value": ""
+            },
+            "logicField": 0,
+            "numberField": 10.0,
+            "textDefault": "",
+            "comment": "Controls how much the mob should be spawned. The spawnrate gets lower as the rolls value is larger.",
+            "vardisplay": "spawnRolls",
+            "varname": "witheredHopkeletonSpawnRolls",
+            "enablecomment": false,
+            "stringlist": []
+          },
+          {
+            "item": {
+              "value": ""
+            },
+            "silkTouchMode": 0,
+            "block": {
+              "value": ""
+            },
+            "logicField": 0,
+            "numberField": 0.0,
+            "textDefault": "",
+            "comment": "If this config is enabled, the mob only spawn next to wither skeletons.",
+            "vardisplay": "shouldSpawnNearbySkeletons",
+            "varname": "witheredHopkeletonShouldSpawnNearbySkeletons",
+            "enablecomment": false,
+            "stringlist": []
+          }
+        ]
       }
     ],
     "file": "CrimsonSteveMutantMobsConfig",
